Fixed the sliding drawers
- The sliding drawers no longer overlap when opening/closing.

--- a/css/screen.css
+++ b/css/screen.css
@@ -148,8 +148,6 @@ html, body {
   font-weight: 300;
   letter-spacing: 0.04em;
   font-size: 14px; }
-  .open .info-drawer-message {
-    display: none; }
 
 .timer-wrapper {
   padding: 26px 30px 30px;
