--- a/css/scss/global.scss
+++ b/css/scss/global.scss
@@ -122,10 +122,6 @@ html, body {
   font-weight: 300;
   letter-spacing: 0.04em;
   font-size: 14px;
-
-  .open &{
-    display: none;
-  }
 }
 
 
